update model pickling process

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -411,11 +411,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ApplyMethod_autoML_cv_ensemble(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str,cv_folds=int,model_name:str):\n",
+    "def ApplyMethod_autoML_cv_ensemble(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str,cv_folds=int,model_name=str):\n",
     "    auto_ml = AutoML()\n",
     "    kf = KFold(n_splits=cv_folds,random_state=42,shuffle=True)\n",
     "    cv_scores = []\n",
@@ -432,8 +432,10 @@
     "                cv_ytrain,cv_ytest = y_train.iloc[train_index],y_train.iloc[test_index]\n",
     "                auto_ml.fit(X_train=cv_xtrain,y_train=cv_ytrain,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
     "                ## store the model\n",
-    "                with open(f'model_pickles/{str(dt.today())}_automl_{model_name}.pkl','wb') as f:\n",
-    "                    pickle.dump(auto_ml.model,f,pickle.HIGHEST_PROTOCOL)\n",
+    "                model_pickle = open(f'model_pickles/{str(dt.today())}_automl_{model_name}.pkl','wb')\n",
+    "                pickle.dump(auto_ml.model,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
+    "                model_pickle.close()\n",
+    "                ## predict, validate\n",
     "                cv_yhat = auto_ml.predict(cv_xtest)\n",
     "                holdout_yhat = auto_ml.predict(x_test)\n",
     "                if task == 'regression':\n",
@@ -451,16 +453,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "## TODO: #9 add cross-validation to final score delivery --DONE\n",
-    "def ApplyMethod_autoML(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str,run_cv=bool,cv_folds=int):\n",
+    "def ApplyMethod_autoML(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str,run_cv=bool,cv_folds=int,model_name=str):\n",
     "    auto_ml = AutoML()\n",
     "    kf = KFold(n_splits=cv_folds,random_state=42,shuffle=True)\n",
     "    cv_scores = []\n",
-    "    cv_models = []\n",
     "## recall that the actual_total_delivery_time data is gamma distributed\n",
     "    class xgbGamma(XGBoostEstimator):\n",
     "        def __init__(self, task=\"regression\", **config):\n",
@@ -478,7 +479,10 @@
     "                cv_ytrain,cv_ytest = y_train.iloc[train_index],y_train.iloc[test_index]\n",
     "                auto_ml.fit(X_train=cv_xtrain,y_train=cv_ytrain,time_budget=time_budget,metric=metric,estimator_list=[str(trained_model.best_estimator)],task=task,seed=42,verbose=0)\n",
     "                ## store the model\n",
-    "                cv_models.append(auto_ml.model)\n",
+    "                model_pickle = open(f'model_pickles/{str(dt.today())}_automl_{model_name}.pkl','wb')\n",
+    "                pickle.dump(auto_ml.model,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
+    "                model_pickle.close()\n",
+    "                ## predict, validate\n",
     "                cv_yhat = auto_ml.predict(cv_xtest)\n",
     "                if task == 'regression':\n",
     "                    rmse = mean_squared_error(y_true=cv_ytest,y_pred=cv_yhat,squared=False)\n",
