updated model pickling process

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,14 +427,16 @@
     "    auto_ml.add_learner(learner_name=\"xgb_gamma\",learner_class=xgbGamma)\n",
     "    try:\n",
     "        ## cross-validation\n",
+    "        cv_subset = 0\n",
     "        for train_index,test_index in kf.split(x_train):\n",
     "                cv_xtrain,cv_xtest = x_train.iloc[train_index],x_train.iloc[test_index]\n",
     "                cv_ytrain,cv_ytest = y_train.iloc[train_index],y_train.iloc[test_index]\n",
     "                auto_ml.fit(X_train=cv_xtrain,y_train=cv_ytrain,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
     "                ## store the model\n",
-    "                model_pickle = open(f'model_pickles/{str(dt.today())}_automl_{model_name}.pkl','wb')\n",
+    "                model_pickle = open(f'model_pickles/cv_{cv_subset}_automl_{model_name}.pkl','wb')\n",
     "                pickle.dump(auto_ml.model,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
     "                model_pickle.close()\n",
+    "                cv_subset += 1\n",
     "                ## predict, validate\n",
     "                cv_yhat = auto_ml.predict(cv_xtest)\n",
     "                holdout_yhat = auto_ml.predict(x_test)\n",
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,6 +472,10 @@
     "    try:\n",
     "        auto_ml.fit(X_train=x_train,y_train=y_train,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
     "        trained_model = auto_ml\n",
+    "        ## store the model\n",
+    "        model_pickle = open(f'model_pickles/automl_{model_name}.pkl','wb')\n",
+    "        pickle.dump(auto_ml.model,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
+    "        model_pickle.close()\n",
     "        feature_importances_df = pd.DataFrame({'features':auto_ml.feature_names_in_,'importance':auto_ml.feature_importances_})\n",
     "        ## cross-validation\n",
     "        if run_cv == True:\n",
@@ -478,10 +484,6 @@
     "                cv_xtrain,cv_xtest = x_train.iloc[train_index],x_train.iloc[test_index]\n",
     "                cv_ytrain,cv_ytest = y_train.iloc[train_index],y_train.iloc[test_index]\n",
     "                auto_ml.fit(X_train=cv_xtrain,y_train=cv_ytrain,time_budget=time_budget,metric=metric,estimator_list=[str(trained_model.best_estimator)],task=task,seed=42,verbose=0)\n",
-    "                ## store the model\n",
-    "                model_pickle = open(f'model_pickles/{str(dt.today())}_automl_{model_name}.pkl','wb')\n",
-    "                pickle.dump(auto_ml.model,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
-    "                model_pickle.close()\n",
     "                ## predict, validate\n",
     "                cv_yhat = auto_ml.predict(cv_xtest)\n",
     "                if task == 'regression':\n",
@@ -1060,11 +1062,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def append_prep_feature(x_train,x_test,y_train,y_test):\n",
+    "def append_prep_feature(x_train,x_holdout,y_train,y_holdout):\n",
     "## returns est_order_total_prep_time from a pre-existing train-test data set\n",
     "    train,test = x_train.join(y_train),x_holdout.join(y_holdout)\n",
     "    train['est_order_total_prep_time'] = train['actual_total_delivery_duration'] - train['est_time_non-prep']\n",
@@ -1263,11 +1265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train_prep,y_holdout_prep = append_prep_feature(x_train=x_train,x_test=x_holdout,y_train=y_train,y_test=y_holdout)"
+    "y_train_prep,y_holdout_prep = append_prep_feature(x_train=x_train,x_holdout=x_holdout,y_train=y_train,y_holdout=y_holdout)"
    ]
   },
   {
@@ -1309,26 +1311,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 22] Invalid argument: 'model_pickles/2023-02-22 13:38:44.415389_automl_twoStep_stepOne_predPrep.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [30], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m prep_est_cv_model \u001b[39m=\u001b[39m ApplyMethod_autoML_cv_ensemble(\n\u001b[0;32m      2\u001b[0m     x_train\u001b[39m=\u001b[39;49mx_train,\n\u001b[0;32m      3\u001b[0m     x_test\u001b[39m=\u001b[39;49mx_holdout,\n\u001b[0;32m      4\u001b[0m     y_train\u001b[39m=\u001b[39;49my_train_prep,\n\u001b[0;32m      5\u001b[0m     y_test\u001b[39m=\u001b[39;49my_holdout_prep,\n\u001b[0;32m      6\u001b[0m     time_budget\u001b[39m=\u001b[39;49m\u001b[39m360\u001b[39;49m,\n\u001b[0;32m      7\u001b[0m     metric\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mmse\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      8\u001b[0m     estimator_list\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mxgb_gamma\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mxgboost\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mxgb_limitdepth\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[0;32m      9\u001b[0m     task\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mregression\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m     10\u001b[0m     cv_folds\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m,\n\u001b[0;32m     11\u001b[0m     model_name\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mtwoStep_stepOne_predPrep\u001b[39;49m\u001b[39m'\u001b[39;49m\n\u001b[0;32m     12\u001b[0m )\n",
+      "Cell \u001b[1;32mIn [24], line 33\u001b[0m, in \u001b[0;36mApplyMethod_autoML_cv_ensemble\u001b[1;34m(x_train, x_test, y_train, y_test, time_budget, metric, estimator_list, task, cv_folds, model_name)\u001b[0m\n\u001b[0;32m     31\u001b[0m                 cv_holdout_scores\u001b[39m.\u001b[39mappend(accuracy_score(y_true\u001b[39m=\u001b[39my_test,y_pred\u001b[39m=\u001b[39mcv_yhat))\n\u001b[0;32m     32\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m ex:\n\u001b[1;32m---> 33\u001b[0m     \u001b[39mraise\u001b[39;00m ex\n\u001b[0;32m     34\u001b[0m \u001b[39mreturn\u001b[39;00m cv_scores,cv_holdout_scores\n",
+      "Cell \u001b[1;32mIn [24], line 18\u001b[0m, in \u001b[0;36mApplyMethod_autoML_cv_ensemble\u001b[1;34m(x_train, x_test, y_train, y_test, time_budget, metric, estimator_list, task, cv_folds, model_name)\u001b[0m\n\u001b[0;32m     16\u001b[0m auto_ml\u001b[39m.\u001b[39mfit(X_train\u001b[39m=\u001b[39mcv_xtrain,y_train\u001b[39m=\u001b[39mcv_ytrain,time_budget\u001b[39m=\u001b[39mtime_budget,metric\u001b[39m=\u001b[39mmetric,estimator_list\u001b[39m=\u001b[39mestimator_list,task\u001b[39m=\u001b[39mtask,seed\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m,verbose\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m     17\u001b[0m \u001b[39m## store the model\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m model_pickle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\u001b[39mf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mmodel_pickles/\u001b[39;49m\u001b[39m{\u001b[39;49;00m\u001b[39mstr\u001b[39;49m(dt\u001b[39m.\u001b[39;49mtoday())\u001b[39m}\u001b[39;49;00m\u001b[39m_automl_\u001b[39;49m\u001b[39m{\u001b[39;49;00mmodel_name\u001b[39m}\u001b[39;49;00m\u001b[39m.pkl\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mwb\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     19\u001b[0m pickle\u001b[39m.\u001b[39mdump(auto_ml\u001b[39m.\u001b[39mmodel,model_pickle,pickle\u001b[39m.\u001b[39mHIGHEST_PROTOCOL)\n\u001b[0;32m     20\u001b[0m model_pickle\u001b[39m.\u001b[39mclose()\n",
+      "File \u001b[1;32mc:\\Users\\lukew\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mOSError\u001b[0m: [Errno 22] Invalid argument: 'model_pickles/2023-02-22 13:38:44.415389_automl_twoStep_stepOne_predPrep.pkl'"
+     ]
+    }
+   ],
    "source": [
     "prep_est_cv_model = ApplyMethod_autoML_cv_ensemble(\n",
     "    x_train=x_train,\n",
     "    x_test=x_holdout,\n",
     "    y_train=y_train_prep,\n",
     "    y_test=y_holdout_prep,\n",
-    "    time_budget=180,\n",
+    "    time_budget=360,\n",
     "    metric='mse',\n",
     "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
     "    task='regression',\n",
-    "    cv_folds=5\n",
+    "    cv_folds=5,\n",
+    "    model_name='twoStep_stepOne_predPrep'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1343,6 +1361,11 @@
     }
    ],
    "source": [
+    "print('Cross-validation results (RMSE): ')\n",
+    "print(prep_est_cv_model[0])\n",
+    "print('Mean of cross-validation results (RMSE): ')\n",
+    "print(np.mean(prep_est_cv_model[0]))\n",
+    "\n",
     "print('RMSE scores of cv models against holdout: ')\n",
     "print(prep_est_cv_model[1])\n",
     "print('Average RMSE score (ensemble score): ')\n",
@@ -1538,6 +1561,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 743.8711855802673,\n",
+       " 'train_RMSE_to_std_ratio': 0.6444995816078012,\n",
+       " 'train_MAE:': 525.3830954523438,\n",
+       " 'test_RMSE:': 839.3984891100266,\n",
+       " 'test_RMSE_to_std_ratio': 0.7519343047123673,\n",
+       " 'test_MAE:': 559.6701162579369}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "composite_deliv_cv_model = ApplyMethod_autoML_cv_ensemble(\n",
+    "    x_train=composite_train.drop(columns=['actual_total_delivery_duration']),\n",
+    "    x_test=composite_test.drop(columns=['actual_total_delivery_duration']),\n",
+    "    y_train=y_train,\n",
+    "    y_test=y_holdout,\n",
+    "    time_budget=360,\n",
+    "    metric='mse',\n",
+    "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
+    "    task='regression',\n",
+    "    cv_folds=3,\n",
+    "    model_name='twoStep_stepOne_predPrep'\n",
+    ")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1583,9 +1641,16 @@
     }
    ],
    "source": [
-    "print(composite_deliv_model[3])\n",
-    "print(np.mean(composite_deliv_model[3]))\n",
-    "print(np.mean(composite_deliv_model[3])/np.std(composite_test['actual_total_delivery_duration']))"
+    "print('Cross-validation results (RMSE): ')\n",
+    "print(composite_deliv_cv_model[0])\n",
+    "print('Mean of cross-validation results (RMSE): ')\n",
+    "print(np.mean(composite_deliv_cv_model[0]))\n",
+    "\n",
+    "print('RMSE scores of cv models against holdout: ')\n",
+    "print(composite_deliv_cv_model[1])\n",
+    "print('Average RMSE score (ensemble score): ')\n",
+    "print(np.mean(composite_deliv_cv_model[1]))\n",
+    "print(np.mean(composite_deliv_cv_model[3])/np.std(composite_test['actual_total_delivery_duration']))"
    ]
   },
   {
