--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,11 +411,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ApplyMethod_autoML_cv_ensemble(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str,cv_folds=int,model_name=str):\n",
+    "def ApplyMethod_autoML_cv_ensemble(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str,cv_folds=int,file_path=str,model_name=str):\n",
     "    auto_ml = AutoML()\n",
     "    kf = KFold(n_splits=cv_folds,random_state=42,shuffle=True)\n",
     "    cv_scores = []\n",
@@ -433,7 +433,7 @@
     "                cv_ytrain,cv_ytest = y_train.iloc[train_index],y_train.iloc[test_index]\n",
     "                auto_ml.fit(X_train=cv_xtrain,y_train=cv_ytrain,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
     "                ## store the model\n",
-    "                model_pickle = open(f'model_pickles/cv_{cv_subset}_automl_{model_name}.pkl','wb')\n",
+    "                model_pickle = open(f'{file_path}/cv_{cv_subset}_automl_{model_name}.pkl','wb')\n",
     "                pickle.dump(auto_ml.model,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
     "                model_pickle.close()\n",
     "                cv_subset += 1\n",
@@ -455,12 +455,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO: #9 add cross-validation to final score delivery --DONE\n",
-    "def ApplyMethod_autoML(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str,run_cv=bool,cv_folds=int,model_name=str):\n",
+    "def ApplyMethod_autoML(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str,run_cv=bool,cv_folds=int,file_path=str,model_name=str):\n",
     "    auto_ml = AutoML()\n",
     "    kf = KFold(n_splits=cv_folds,random_state=42,shuffle=True)\n",
     "    cv_scores = []\n",
@@ -473,7 +472,7 @@
     "        auto_ml.fit(X_train=x_train,y_train=y_train,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
     "        trained_model = auto_ml\n",
     "        ## store the model\n",
-    "        model_pickle = open(f'model_pickles/automl_{model_name}.pkl','wb')\n",
+    "        model_pickle = open(f'{file_path}/automl_{model_name}.pkl','wb')\n",
     "        pickle.dump(auto_ml.model,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
     "        model_pickle.close()\n",
     "        feature_importances_df = pd.DataFrame({'features':auto_ml.feature_names_in_,'importance':auto_ml.feature_importances_})\n",
@@ -821,37 +820,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<flaml.automl.model.XGBoostLimitDepthEstimator at 0x2d4b45e3280>,\n",
-       " <flaml.automl.model.XGBoostLimitDepthEstimator at 0x2d4b465adc0>,\n",
-       " <flaml.automl.model.XGBoostLimitDepthEstimator at 0x2d4b45e3490>,\n",
-       " <flaml.automl.model.XGBoostLimitDepthEstimator at 0x2d48daf35b0>,\n",
-       " <flaml.automl.model.XGBoostSklearnEstimator at 0x2d4b45e7790>]"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "auto_xgb_cv = ApplyMethod_autoML_cv_ensemble(\n",
     "    x_train=x_train,\n",
     "    x_test=x_holdout,\n",
     "    y_train=y_train,\n",
     "    y_test=y_holdout,\n",
-    "    time_budget=180,\n",
+    "    time_budget=360,\n",
     "    metric='mse',\n",
     "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
     "    task='regression',\n",
-    "    cv_folds=5\n",
-    ")\n",
-    "auto_xgb_cv[2]"
+    "    cv_folds=3,\n",
+    "    file_path='singleModel_model_pickles',\n",
+    "    model_name='singleStepModel_predPrep.pkl'\n",
+    ")"
    ]
   },
   {
@@ -1311,24 +1296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 22] Invalid argument: 'model_pickles/2023-02-22 13:38:44.415389_automl_twoStep_stepOne_predPrep.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [30], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m prep_est_cv_model \u001b[39m=\u001b[39m ApplyMethod_autoML_cv_ensemble(\n\u001b[0;32m      2\u001b[0m     x_train\u001b[39m=\u001b[39;49mx_train,\n\u001b[0;32m      3\u001b[0m     x_test\u001b[39m=\u001b[39;49mx_holdout,\n\u001b[0;32m      4\u001b[0m     y_train\u001b[39m=\u001b[39;49my_train_prep,\n\u001b[0;32m      5\u001b[0m     y_test\u001b[39m=\u001b[39;49my_holdout_prep,\n\u001b[0;32m      6\u001b[0m     time_budget\u001b[39m=\u001b[39;49m\u001b[39m360\u001b[39;49m,\n\u001b[0;32m      7\u001b[0m     metric\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mmse\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      8\u001b[0m     estimator_list\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mxgb_gamma\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mxgboost\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mxgb_limitdepth\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[0;32m      9\u001b[0m     task\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mregression\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m     10\u001b[0m     cv_folds\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m,\n\u001b[0;32m     11\u001b[0m     model_name\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mtwoStep_stepOne_predPrep\u001b[39;49m\u001b[39m'\u001b[39;49m\n\u001b[0;32m     12\u001b[0m )\n",
-      "Cell \u001b[1;32mIn [24], line 33\u001b[0m, in \u001b[0;36mApplyMethod_autoML_cv_ensemble\u001b[1;34m(x_train, x_test, y_train, y_test, time_budget, metric, estimator_list, task, cv_folds, model_name)\u001b[0m\n\u001b[0;32m     31\u001b[0m                 cv_holdout_scores\u001b[39m.\u001b[39mappend(accuracy_score(y_true\u001b[39m=\u001b[39my_test,y_pred\u001b[39m=\u001b[39mcv_yhat))\n\u001b[0;32m     32\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m ex:\n\u001b[1;32m---> 33\u001b[0m     \u001b[39mraise\u001b[39;00m ex\n\u001b[0;32m     34\u001b[0m \u001b[39mreturn\u001b[39;00m cv_scores,cv_holdout_scores\n",
-      "Cell \u001b[1;32mIn [24], line 18\u001b[0m, in \u001b[0;36mApplyMethod_autoML_cv_ensemble\u001b[1;34m(x_train, x_test, y_train, y_test, time_budget, metric, estimator_list, task, cv_folds, model_name)\u001b[0m\n\u001b[0;32m     16\u001b[0m auto_ml\u001b[39m.\u001b[39mfit(X_train\u001b[39m=\u001b[39mcv_xtrain,y_train\u001b[39m=\u001b[39mcv_ytrain,time_budget\u001b[39m=\u001b[39mtime_budget,metric\u001b[39m=\u001b[39mmetric,estimator_list\u001b[39m=\u001b[39mestimator_list,task\u001b[39m=\u001b[39mtask,seed\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m,verbose\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m     17\u001b[0m \u001b[39m## store the model\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m model_pickle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\u001b[39mf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mmodel_pickles/\u001b[39;49m\u001b[39m{\u001b[39;49;00m\u001b[39mstr\u001b[39;49m(dt\u001b[39m.\u001b[39;49mtoday())\u001b[39m}\u001b[39;49;00m\u001b[39m_automl_\u001b[39;49m\u001b[39m{\u001b[39;49;00mmodel_name\u001b[39m}\u001b[39;49;00m\u001b[39m.pkl\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mwb\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     19\u001b[0m pickle\u001b[39m.\u001b[39mdump(auto_ml\u001b[39m.\u001b[39mmodel,model_pickle,pickle\u001b[39m.\u001b[39mHIGHEST_PROTOCOL)\n\u001b[0;32m     20\u001b[0m model_pickle\u001b[39m.\u001b[39mclose()\n",
-      "File \u001b[1;32mc:\\Users\\lukew\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 22] Invalid argument: 'model_pickles/2023-02-22 13:38:44.415389_automl_twoStep_stepOne_predPrep.pkl'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prep_est_cv_model = ApplyMethod_autoML_cv_ensemble(\n",
     "    x_train=x_train,\n",
@@ -1339,24 +1309,29 @@
     "    metric='mse',\n",
     "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
     "    task='regression',\n",
-    "    cv_folds=5,\n",
-    "    model_name='twoStep_stepOne_predPrep'\n",
+    "    cv_folds=3,\n",
+    "    file_path='prepTime_model_pickles',\n",
+    "    model_name='twoStepModel_stepOne_predPrep'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Cross-validation results (RMSE): \n",
+      "[909.5733655581442, 858.4815235373962, 909.2740115531933]\n",
+      "Mean of cross-validation results (RMSE): \n",
+      "892.4429668829113\n",
       "RMSE scores of cv models against holdout: \n",
-      "[843.5441719919338, 839.5093461156963, 840.2338562223306, 838.207975286019, 840.5847270007723]\n",
+      "[831.2994095001536, 846.636824240254, 833.8898001289159]\n",
       "Average RMSE score (ensemble score): \n",
-      "840.4160153233504\n"
+      "837.2753446231078\n"
      ]
     }
    ],
@@ -1512,11 +1487,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "yhat_train,yhat_test = prep_est_model[0].predict(x_train),prep_est_model[0].predict(x_holdout)\n",
+    "model = pickle.load(open('prepTime_model_pickles/cv_0_automl_twoStepModel_stepOne_predPrep.pkl','rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'predict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [42], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m yhat_train,yhat_test \u001b[39m=\u001b[39m prep_est_cv_model[\u001b[39m0\u001b[39;49m]\u001b[39m.\u001b[39;49mpredict(x_train),prep_est_cv_model[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mpredict(x_holdout)\n\u001b[0;32m      2\u001b[0m composite_train,composite_test \u001b[39m=\u001b[39m x_train,x_holdout\n\u001b[0;32m      3\u001b[0m composite_train[\u001b[39m'\u001b[39m\u001b[39mpred_order_prep_time\u001b[39m\u001b[39m'\u001b[39m],composite_test[\u001b[39m'\u001b[39m\u001b[39mpred_order_prep_time\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m yhat_train\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m),yhat_test\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'predict'"
+     ]
+    }
+   ],
+   "source": [
+    "yhat_train,yhat_test = prep_est_cv_model[0].predict(x_train),prep_est_cv_model[0].predict(x_holdout)\n",
     "composite_train,composite_test = x_train,x_holdout\n",
     "composite_train['pred_order_prep_time'],composite_test['pred_order_prep_time'] = yhat_train.reshape(-1,1),yhat_test.reshape(-1,1)\n",
     "#composite_train['composite_deliv_time'],composite_test['composite_deliv_time'] = composite_train['pred_order_prep_time'] + composite_train['est_time_non-prep'],composite_test['pred_order_prep_time'] + composite_test['est_time_non-prep']\n",
@@ -1591,7 +1587,8 @@
     "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
     "    task='regression',\n",
     "    cv_folds=3,\n",
-    "    model_name='twoStep_stepOne_predPrep'\n",
+    "    file_path='deliveryTime_model_pickles'\n",
+    "    model_name='twoStepModel_stepTwo_predDelivery'\n",
     ")"
    ]
   },
